# realvekst

./: 01-principles.md  2020-2026.xlsx  CLAUDE.md  COMMIT_EDITMSG  HEAD (2)  ORIG_HEAD  PROJECT_PLAN.md  README.md  STATUS.md  __init__ (3).py  bevilgning_2020_2026.xlsx  deflator.py  deflatorer.csv  download  main (1)  pyproject.toml
.github/workflows/: ci.yml  pages.yml
data/raw/: bevilgning_2014_2019.xlsx  deflatorer.csv
docs/design/: 01-principles.md  02-architecture.md  03-components.md
src/analyse/: aggregering.py  brudd.py  realvekst.py
src/dashboard/: dashboard.js  index.html  styles.css  tokens.css
src/dashboard/data/: oversikt.json
src/dashboard/data/departementer/: 1.json  11.json  13.json  14.json  15.json  16.json  17.json  18.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
src/data/: bevilgning.py  bygg_datasett.py  deflator.py
tests/: test_aggregering.py  test_bevilgning.py  test_brudd.py  test_bygg_datasett.py  test_deflator.py  test_realvekst.py
